set home page outline

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gilber - Personal CV/Resume</title>
-    <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="stylesheet" href="assect/css/style.css">
 
     <!-- fafa cdn - start -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,10 +13,11 @@
 </head>
 
 <body>
+
     <header>
         <div class="base">
             <div class="logo">
-                <img src="asset/img/logo.svg" alt="">
+                <img src="assect/img/logo.svg" alt="">
             </div>
             <nav class="head-nav">
                 <a href="">HOME</a>
@@ -36,9 +37,209 @@
                     <i class="fa fa-twitter" aria-hidden="true"></i> <br>
                     <i class="fa fa-instagram" aria-hidden="true"></i> <br>
                 </div>
+                <div class="copyRight"><span>© Gilber. 2020</span></div>
             </div>
         </div>
     </header>
+
+    <section class="home">
+        <!-- <img class="home-img" src="assect/img/home.jpg" alt="" > -->
+
+        <div class="home-content-main">
+            <div class="home-content-inside">
+                <div class="h-content">
+
+                    <div class="play-main">
+                        <div class="play-out">
+                            <i class="fa fa-play" aria-hidden="true"></i>
+                        </div>
+                    </div>
+
+                    <div class="hc-heading">
+                        <span>Product Designer</span>
+                    </div>
+
+                    <div class="hc-name">
+                        <span>Gilber.</span>
+                    </div>
+                    <div class="hc-detail">
+                        <span>Working with client and community, we deliver masterplans that create vibrant new places
+                            and spaces, attract people, and
+                            encourage</span>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="about">
+        <div class="about-main">
+            <div class="am-content">
+
+                <div class="about-exp">
+                    <div class="about-exp-num">
+                        <span>9.</span>
+                    </div>
+                    <div class="about-exp-txt">
+                        <span>Years</span>
+                        <span>Experience</span>
+                        <span>Working</span>
+                    </div>
+                </div>
+
+                <div class="about-exp-topic">
+                    <div class="aet-head">
+                        <span>Great Experience</span>
+                    </div>
+                    <div class="aet-contect">
+                        <span>Fill appear won't may make moveth signs. Fourth. Good own. Green you're moveth us,
+                            lesser.
+                        </span>
+                    </div>
+                    <div class="about-range-main">
+                        <div class="range-web">
+                            <span>WEB DEVELOPMENT</span>
+                            <input type="range">
+                        </div>
+                        <div class="range-figma">
+                            <span>FIGMA</span>
+                            <input type="range">
+                        </div>
+                        <div class="range-wordpress">
+                            <span>WORDPRESS</span>
+                            <input type="range">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="projects">
+
+    </section>
+
+    <section class="education">
+
+    </section>
+
+
+    <section class="testimonials">
+        <div class="tm-main">
+
+            <div class="tm-con">
+                <div class="tmc-cote">
+                    <img src="assect/img/double-quotes.png" alt="">
+                </div>
+                <div class="tmc-con">
+                    <span>Creative & dedicated is things that gilber studio brings for your business.</span>
+                </div>
+            </div>
+
+            <div class="tm-carousel">
+
+            </div>
+        </div>
+    </section>
+
+
+    <section class="partners">
+        <div class="partners-main">
+            <div class="partners-inner">
+                <div class="partners-heding">
+                    <span>partners</span>
+                </div>
+                <div class="partners-logo">
+                    <div class="p-logo"><img src="assect/img/behr.png" alt=""></div>
+                    <div class="p-logo"><img src="assect/img/christoper.png" alt=""></div>
+                    <div class="p-logo"><img src="assect/img/csfti.png" alt=""></div>
+                    <div class="p-logo"><img src="assect/img/artchive.png" alt=""></div>
+                    <div class="p-logo"><img src="assect/img/fasteane.png" alt=""></div>
+                    <div class="p-logo"><img src="assect/img/badische.png" alt=""></div>
+                    <div class="p-logo"><img src="assect/img/ron lones.png" alt=""></div>
+                    <div class="p-logo"><img src="assect/img/golden.png" alt=""></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="blog">
+        <div class="blog-main">
+            <div class="blog-inner">
+
+                <div class="blog-head">
+                    <span>Recent news</span>
+                </div>
+
+                <div class="blog-con-main">
+                    <div class="blog-1">
+                        <span class="blog-date"></span>
+                        <span class="blog-head"></span>
+                        <span class="blog-readMore">Read more <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                    <div class="blog-2">
+                        <span class="blog-date"></span>
+                        <span class="blog-head"></span>
+                        <span class="blog-readMore">Read more <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                    <div class="blog-3">
+                        <span class="blog-date"></span>
+                        <span class="blog-head"></span>
+                        <span class="blog-readMore">Read more <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact">
+        <div class="contact-main">
+            <div class="contact-inner">
+                <div class="contact-address">
+                    <div class="cnt-head">
+                        <span>
+                            Contact
+                        </span>
+                    </div>
+                    <div class="cnt-quote">
+                        <span>You'll called for yielding male, so lights Stars abundantly, is their.</span>
+                    </div>
+                    <div class="cnt-address">
+                        <span>27 Queen St, New York USA</span>
+                    </div>
+                    <div class="cnt-number">
+                        <span>+7 (212) 674-25-10</span>
+                    </div>
+                    <div class="cnt-email">
+                        <span>gilber.design@gmail.com</span>
+                    </div>
+                </div>
+
+                <div class="contact-form">
+                    <div class="form-head">
+                        <span>Let's grab a coffee and jump on conversation chat with me.</span>
+                    </div>
+                    <div class="form">
+                        <form action="">
+                            <input type="text">
+                            <input type="email">
+                            <textarea name="" id="" ></textarea>
+                            <button>CONTACT ME</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
