set project page outline

--- a/projects.html
+++ b/projects.html
@@ -44,8 +44,96 @@
 
 
 
-    <section class="banner">
-        
+    <section class="banner" style="background-image: url('assect/img/bottle.jpg');">
+        <div class="banner-content">
+            <div class="banner-head">
+                <span>The Bottle <span>.</span></span>
+            </div>
+        </div>
+
+        <div class="banner-info">
+
+            <div class="bi-design">
+                <span>DESIGN</span>
+                <span>Jonny Laymore</span>
+            </div>
+
+            <div class="bi-services">
+                <span>SERVICES</span>
+                <span>Branding, UI/UX Design, Mobile Design</span>
+            </div>
+
+            <div class="bi-date">
+                <span>DATE</span>
+                <span>Feburary 25th, 2020</span>
+            </div>
+
+            <div class="bi-team">
+                <span>TEAM</span>
+                <span>Paul - Designer</span>
+                <span>VLThemes - Coder</span>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="project-info">
+        <div class="project-info-main">
+            <p>Updated portraits of all Instrument employees for the new Instrument site. A unified look and
+                background allows photos
+                to mesh seamlessly online. To see it live check out:<a href="">https://example.domain/denima6vsco</a>
+            </p>
+        </div>
+    </section>
+
+
+    <section class="breaf">
+        <div class="breaf-main">
+            <div class="breaf-img">
+                <img src="assect/img/bottle2.jpg" alt="">
+            </div>
+            <div class="breaf-head">
+                <span>Breaf & idea</span>
+            </div>
+            <div class="breaf-con">
+                <p>Thing form thing fifth. Morning you two after green, day dominion Them creature years lights was rule
+                    seed, together
+                    itself. Lights creeping second spirit air the. You night and their.</p>
+                <p>Creepeth deep, dry whales. Given light, moving our. Third greater them replenish fourth.</p>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="project-video" style="background-image: url('assect/img/bottle3.jpg');">
+        <!-- <div class="project-video-main"></div> -->
+        <div class="project-video-play">
+            <i class="fa fa-play" aria-hidden="true"></i>
+        </div>
+    </section>
+
+
+    <section class="result">
+        <div class="result-head">
+            <span>Result.</span>
+        </div>
+
+        <div class="result-info">
+            <p>To, him our hath one itself i great brought days may fowl, seed so great is fifth, herb second, said. His
+                place creepeth
+                male sea. Multiply bearing midst set.</p>
+        </div>
+
+        <div class="result-img">
+            <img src="assect/img/bottle.jpg" alt="">
+        </div>
+
+        <div class="result-heart">
+            <div class="rh-inner">
+                <i class="fa fa-heart" aria-hidden="true"></i>
+            </div>
+        </div>
     </section>
 
 </body>
