--- a/blog.html
+++ b/blog.html
@@ -2,198 +2,203 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
-    <link rel="stylesheet" href="assect/css/style.css">
+    <link rel="stylesheet" href="assect/css/style.css" />
 
     <!-- fafa cdn - start -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!-- fafa cdn - end -->
 </head>
 
 <body>
-
     <header>
         <div class="base">
             <div class="logo">
-                <img src="assect/img/logo.svg" alt="">
+                <img src="assect/img/logo.svg" alt="" />
             </div>
             <nav class="head-nav">
-                <a href="">HOME</a>
-                <a href="">ABOUT</a>
-                <a href="">PROJECTS</a>
-                <a href="">TESTIMONIALS</a>
-                <a href="">PARTNERS</a>
-                <a href="">BLOG</a>
-                <a href="">CONTACT</a>
+                <a href="#home">HOME</a>
+                <a href="#about">ABOUT</a>
+                <a href="#projects">PROJECTS</a>
+                <a href="#testimonials">TESTIMONIALS</a>
+                <a href="#partners">PARTNERS</a>
+                <a href="#blog">BLOG</a>
+                <a href="#contact">CONTACT</a>
             </nav>
-            <div class="num">
-                +7(212)674-25-10
-            </div>
+            <div class="num">+7(212)674-25-10</div>
             <div class="social">
                 <div class="icon">
-                    <i class="fa fa-facebook" aria-hidden="true"></i> <br>
-                    <i class="fa fa-twitter" aria-hidden="true"></i> <br>
-                    <i class="fa fa-instagram" aria-hidden="true"></i> <br>
+                    <i class="fa fa-facebook" aria-hidden="true"></i> <br />
+                    <i class="fa fa-twitter" aria-hidden="true"></i> <br />
+                    <i class="fa fa-instagram" aria-hidden="true"></i> <br />
                 </div>
-                <div class="copyRight"><span>© Gilber. 2020</span></div>
+                <div class="copyRight-main">
+                    <div class="copyRight">
+                        <p>©&nbsp;Gilber.&nbsp;2020</p>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
 
-
-    <section class="blog-banner" style="background-image: url(assect/img/bp1.jpg);">
+    <section class="blog-banner" style="background-image: url(assect/img/bp1.jpg)">
         <div class="blog-banner-con">
             <span class="bb-date">December 17,2020</span>
-            <span class="bb-head">Scent in the voyages</span>
+            <h1 class="bb-head">Scent in the voyages</h1>
         </div>
     </section>
-
 
     <section class="creature">
         <div class="creature-main">
             <div class="creature-inner">
                 <div class="creature-head">
-                    <span>Beast Creature days.</span>
+                    <h3>Beast Creature days.</h3>
                 </div>
-                <div class="creature-con">
-                    <span>This response is important for our ability to learn from mistakes, but it alsogives rise to
-                        self-criticism, because it
-                        is part of the threat-protection system. In other words, what keeps us safe can go too far, and
-                        keep us too safe. In
-                        fact it can trigger self-censoring.
-                    </span>
-                    <span>This response is important for our ability to learn from mistakes, but it alsogives rise to
-                        self-criticism, because it
-                        is part of the threat-protection system. In other words, what keeps us safe can go too far, and
-                        keep us too safe. In
-                        fact it can trigger self-censoring.
-                    </span>
+                <div class="creature-paragrap">
+                    <p>
+                        This response is important for our ability to learn from mistakes,
+                        but it alsogives rise to self-criticism, because it is part of the
+                        threat-protection system. In other words, what keeps us safe can
+                        go too far, and keep us too safe. In fact it can trigger
+                        self-censoring.
+                    </p>
+                    <p>
+                        This response is important for our ability to learn from mistakes,
+                        but it alsogives rise to self-criticism, because it is part of the
+                        threat-protection system. In other words, what keeps us safe can
+                        go too far, and keep us too safe. In fact it can trigger
+                        self-censoring.
+                    </p>
                 </div>
-
             </div>
         </div>
     </section>
 
-
     <section class="blog-photo">
-        <img src="assect/img/bp2.jpg" alt="">
+        <div class="blog-photo-inner">
+            <img src="assect/img/bp2.jpg" alt="" />
+        </div>
     </section>
-
 
     <section class="mfe">
         <div class="mre-main">
-            <div class="mfe-head">
-                <span>Methods for Everyone.</span>
-            </div>
-            <div class="mfe-para">
-                <span>
-                    This response is important for our ability to learn from mistakes, but it alsogives rise to
-                    self-criticism, because it
-                    is part of the threat-protection system. In other words, what keeps us safe can go too far, and keep
-                    us too safe. In
-                    fact it can trigger self-censoring.
-                </span>
-                <span>
-                    One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in the
-                    future. The same is true as
-                    we experience the emotional sensation of stress from our first instances of social rejection or
-                    ridicule. We quickly
-                    learn to fear and thus automatically avoid potentially stressful situations of all kinds, including
-                    the most common of
-                    all:
-                </span>
+            <div class="mer-inner">
+                <div class="mer-head">
+                    <h3>Methods for Everyone.</h3>
+                </div>
+                <div class="mer-para">
+                    <p>
+                        This response is important for our ability to learn from mistakes,
+                        but it alsogives rise to self-criticism, because it is part of the
+                        threat-protection system. In other words, what keeps us safe can
+                        go too far, and keep us too safe. In fact it can trigger
+                        self-censoring.
+                    </p>
+                    <p>
+                        One touch of a red-hot stove is usually all we need to avoid that
+                        kind of discomfort in the future. The same is true as we
+                        experience the emotional sensation of stress from our first
+                        instances of social rejection or ridicule. We quickly learn to
+                        fear and thus automatically avoid potentially stressful situations
+                        of all kinds, including the most common of all:
+                    </p>
+                </div>
             </div>
         </div>
     </section>
 
-
     <section class="blog-photo">
-        <img src="assect/img/bp3.jpg" alt="">
+        <img src="assect/img/bp3.jpg" alt="" />
     </section>
 
     <section class="blog-quotes">
         <div class="blog-quotes-main">
-
-            <div class="blog-quote-con">
-                <div class="bqc-img">
-                    <img src="assect/img/double-quotes.png" alt="">
-                </div>
-                <div class="bqc-con">
-                    <span>Our greatest weakness lies in giving up. The most certain way to succeed is always to try just
-                        one more time. emotional
-                        sensation of stress from our first.
-                    </span>
-                    <span>Griff Bowden</span>
-                    <span>Google</span>
+            <div class="blog-quote-con-main">
+                <div class="blog-quote-con-inner">
+                    <div class="bqc-img">
+                        <img src="assect/img/double-quotes.png" alt="" />
+                    </div>
+                    <div class="bqc-con">
+                        <p>
+                            Our greatest weakness lies in giving up. The most certain way to
+                            succeed is always to try just one more time. emotional sensation
+                            of stress from our first.
+                        </p>
+                        <h5>Griff Bowden</h5>
+                        <p>Google</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="blog-quote-links">
-                <div class="bql-tags">
-                    <span>Tags: <a href="">Follow</a>,<a href="">Like</a>,<a href="">Photography</a></span>
-                </div>
-                <div class="bql-social">
-                    <i class="fa fa-facebook" aria-hidden="true"></i> <br>
-                    <i class="fa fa-twitter" aria-hidden="true"></i> <br>
-                    <i class="fa fa-instagram" aria-hidden="true"></i> <br>
+            <div class="blog-quote-links-main">
+                <div class="blog-quote-links-inner">
+                    <div class="bql-tags">
+                        <span>Tags: <a href="">Follow</a>,<a href=""> Like</a>,<a href="">
+                                Photography</a></span>
+                    </div>
+                    <div class="bql-social">
+                        <h5>Share:</h5>
+                        <i class="fa fa-facebook" aria-hidden="true"></i> <br />
+                        <i class="fa fa-twitter" aria-hidden="true"></i> <br />
+                        <i class="fa fa-instagram" aria-hidden="true"></i> <br />
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
 
     <section class="comments">
         <div class="comments-main">
-            <div class="c-head">
-                <span>Comments (2):</span>
-            </div>
-            <div class="c-comments">
-                <div class="comment1">
-                    <div class="c-img">
-                        <img src="assect/img/comment-1.png" alt="">
-                    </div>
-                    <div class="c-con">
-                        <p>Hayley <span>JUL 03, 2020 AT 15 HOURS AGO</span></p>
-                        <p>
-                            Greater air appear male them moveth without replenish face i whose seas land in deep.
-                            Abundantly after brought
-                            firmament. Behold created two earth above isn't, doesn't face.
-                        </p>
-                        <button class="comment-btn">Reply</button>
-                    </div>
+            <div class="comments-inner">
+                <div class="c-head">
+                    <h4>Comments (2):</h4>
                 </div>
-                <div class="comment2">
-                    <div class="c-img">
-                        <img src="assect/img/comment2.png" alt="">
+                <div class="c-comments">
+                    <div class="comment1">
+                        <div class="c-img">
+                            <img src="assect/img/comment-1.png" alt="" />
+                        </div>
+                        <div class="c-con">
+                            <p>Hayley <span>JUL 03, 2020 AT 15 HOURS AGO</span></p>
+                            <p>
+                                Greater air appear male them moveth without replenish face i
+                                whose seas land in deep. Abundantly after brought firmament.
+                                Behold created two earth above isn't, doesn't face.
+                            </p>
+                            <button class="comment-btn">Reply</button>
+                        </div>
                     </div>
-                    <div class="c-con">
-                        <p>Harry <span>JUL 03, 2020 AT 15 HOURS AGO</span></p>
-                        <p>
-                            Every over god his saw winged moved open, bearing he have, thing together there unto of
-                            bearing.
-                        </p>
-                        <button class="comment-btn">Reply</button>
+                    <div class="comment2">
+                        <div class="c-img">
+                            <img src="assect/img/comment2.png" alt="" />
+                        </div>
+                        <div class="c-con">
+                            <p>Harry <span>JUL 03, 2020 AT 15 HOURS AGO</span></p>
+                            <p>
+                                Every over god his saw winged moved open, bearing he have,
+                                thing together there unto of bearing.
+                            </p>
+                            <button class="comment-btn">Reply</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-
 
     <section class="addcomment">
         <div class="addcomment-main">
-            <input type="text">
-            <input type="email">
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-            <button>POST A COMMENT</button>
+            <div class="addcomment-inner">
+                <h4>Add comment:</h4>
+                <input type="text" placeholder="Name" /> <br />
+                <input type="email" placeholder="Email" /><br />
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea><br />
+                <button>POST A COMMENT</button><br />
+            </div>
         </div>
     </section>
-
-
-
 </body>
 
 </html>
