--- a/index.html
+++ b/index.html
@@ -2,53 +2,53 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gilber - Personal CV/Resume</title>
-    <link rel="stylesheet" href="assect/css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Gilber - Homepage</title>
+    <link rel="stylesheet" href="assect/css/style.css" />
 
     <!-- fafa cdn - start -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!-- fafa cdn - end -->
 </head>
 
 <body>
-
     <header>
         <div class="base">
             <div class="logo">
-                <img src="assect/img/logo.svg" alt="">
+                <img src="assect/img/logo.svg" alt="" />
             </div>
             <nav class="head-nav">
-                <a href="">HOME</a>
-                <a href="">ABOUT</a>
-                <a href="">PROJECTS</a>
-                <a href="">TESTIMONIALS</a>
-                <a href="">PARTNERS</a>
-                <a href="">BLOG</a>
-                <a href="">CONTACT</a>
+                <a href="#home">HOME</a>
+                <a href="#about">ABOUT</a>
+                <a href="#projects">PROJECTS</a>
+                <a href="#testimonials">TESTIMONIALS</a>
+                <a href="#partners">PARTNERS</a>
+                <a href="#blog">BLOG</a>
+                <a href="#contact">CONTACT</a>
             </nav>
-            <div class="num">
-                +7(212)674-25-10
-            </div>
+            <div class="num">+7(212)674-25-10</div>
             <div class="social">
                 <div class="icon">
-                    <i class="fa fa-facebook" aria-hidden="true"></i> <br>
-                    <i class="fa fa-twitter" aria-hidden="true"></i> <br>
-                    <i class="fa fa-instagram" aria-hidden="true"></i> <br>
+                    <i class="fa fa-facebook" aria-hidden="true"></i> <br />
+                    <i class="fa fa-twitter" aria-hidden="true"></i> <br />
+                    <i class="fa fa-instagram" aria-hidden="true"></i> <br />
                 </div>
-                <div class="copyRight"><span>© Gilber. 2020</span></div>
+                <div class="copyRight-main">
+                    <div class="copyRight">
+                        <p>©&nbsp;Gilber.&nbsp;2020</p>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
 
-    <section class="home">
+    <section class="home" id="home" style="background-image: url(assect/img/home.jpg)">
         <!-- <img class="home-img" src="assect/img/home.jpg" alt="" > -->
 
         <div class="home-content-main">
             <div class="home-content-inside">
                 <div class="h-content">
-
                     <div class="play-main">
                         <div class="play-out">
                             <i class="fa fa-play" aria-hidden="true"></i>
@@ -60,57 +60,56 @@
                     </div>
 
                     <div class="hc-name">
-                        <span>Gilber.</span>
+                        <h1>Gilber<span>.</span></h1>
                     </div>
                     <div class="hc-detail">
-                        <span>Working with client and community, we deliver masterplans that create vibrant new places
-                            and spaces, attract people, and
+                        <span>Working with client and community, we deliver masterplans that
+                            create vibrant new places and spaces, attract people, and
                             encourage</span>
                     </div>
-
                 </div>
             </div>
         </div>
     </section>
 
-
-
-    <section class="about">
+    <section class="about" id="about">
         <div class="about-main">
             <div class="am-content">
-
-                <div class="about-exp">
-                    <div class="about-exp-num">
-                        <span>9.</span>
-                    </div>
-                    <div class="about-exp-txt">
-                        <span>Years</span>
-                        <span>Experience</span>
-                        <span>Working</span>
+                <div class="about-exp-out">
+                    <div class="about-exp">
+                        <div class="about-exp-num">
+                            <h1>9<span>.</span></h1>
+                        </div>
+                        <div class="about-exp-txt">
+                            <h5>Years</h5>
+                            <h5>Experience</h5>
+                            <h5>Working</h5>
+                        </div>
                     </div>
                 </div>
 
                 <div class="about-exp-topic">
                     <div class="aet-head">
-                        <span>Great Experience</span>
+                        <h3>Great Experience</h3>
                     </div>
                     <div class="aet-contect">
-                        <span>Fill appear won't may make moveth signs. Fourth. Good own. Green you're moveth us,
-                            lesser.
-                        </span>
+                        <p>
+                            Fill appear won't may make moveth signs. Fourth. Good own. Green
+                            you're moveth us, lesser.
+                        </p>
                     </div>
                     <div class="about-range-main">
-                        <div class="range-web">
-                            <span>WEB DEVELOPMENT</span>
-                            <input type="range">
+                        <div class="range-box web">
+                            <h5>WEB DESIGN</h5>
+                            <div class="range r1"></div>
                         </div>
-                        <div class="range-figma">
-                            <span>FIGMA</span>
-                            <input type="range">
+                        <div class="range-box figma">
+                            <h5>FIGMA</h5>
+                            <div class="range r2"></div>
                         </div>
-                        <div class="range-wordpress">
-                            <span>WORDPRESS</span>
-                            <input type="range">
+                        <div class="range-box wordpress">
+                            <h5>WORDPRESS</h5>
+                            <div class="range r3"></div>
                         </div>
                     </div>
                 </div>
@@ -118,60 +117,63 @@
         </div>
     </section>
 
+    <section class="projects" id="projects"></section>
 
-    <section class="projects">
+    <section class="education" id="education"></section>
 
-    </section>
-
-    <section class="education">
-
-    </section>
-
-
-    <section class="testimonials">
+    <section class="testimonials" id="testimonials">
         <div class="tm-main">
-
             <div class="tm-con">
                 <div class="tmc-cote">
-                    <img src="assect/img/double-quotes.png" alt="">
+                    <img src="assect/img/double-quotes.png" alt="" />
                 </div>
                 <div class="tmc-con">
-                    <span>Creative & dedicated is things that gilber studio brings for your business.</span>
+                    <span>Creative & dedicated is things that gilber studio brings for your
+                        business.</span>
                 </div>
             </div>
 
-            <div class="tm-carousel">
-
-            </div>
+            <div class="tm-carousel"></div>
         </div>
     </section>
 
-
-    <section class="partners">
+    <section class="partners" id="partners">
         <div class="partners-main">
             <div class="partners-inner">
                 <div class="partners-heding">
-                    <span>partners</span>
+                    <h3>Partners</h3>
                 </div>
                 <div class="partners-logo">
-                    <div class="p-logo"><img src="assect/img/behr.png" alt=""></div>
-                    <div class="p-logo"><img src="assect/img/christoper.png" alt=""></div>
-                    <div class="p-logo"><img src="assect/img/csfti.png" alt=""></div>
-                    <div class="p-logo"><img src="assect/img/artchive.png" alt=""></div>
-                    <div class="p-logo"><img src="assect/img/fasteane.png" alt=""></div>
-                    <div class="p-logo"><img src="assect/img/badische.png" alt=""></div>
-                    <div class="p-logo"><img src="assect/img/ron lones.png" alt=""></div>
-                    <div class="p-logo"><img src="assect/img/golden.png" alt=""></div>
+                    <div class="p-logo">
+                        <img src="assect/img/behr.png" alt="" />
+                    </div>
+                    <div class="p-logo">
+                        <img src="assect/img/christoper.png" alt="" />
+                    </div>
+                    <div class="p-logo">
+                        <img src="assect/img/csfti.png" alt="" />
+                    </div>
+                    <div class="p-logo">
+                        <img src="assect/img/artchive.png" alt="" />
+                    </div>
+                    <div class="p-logo">
+                        <img src="assect/img/fasteane.png" alt="" />
+                    </div>
+                    <div class="p-logo">
+                        <img src="assect/img/badische.png" alt="" />
+                    </div>
+                    <div class="p-logo">
+                        <img src="assect/img/ron lones.png" alt="" />
+                    </div>
+                    <div class="p-logo"><img src="assect/img/golden.png" alt="" /></div>
                 </div>
             </div>
         </div>
     </section>
 
-
-    <section class="blog">
+    <section class="blog" id="blog">
         <div class="blog-main">
             <div class="blog-inner">
-
                 <div class="blog-head">
                     <span>Recent news</span>
                 </div>
@@ -180,19 +182,22 @@
                     <div class="blog-1">
                         <span class="blog-date"></span>
                         <span class="blog-head"></span>
-                        <span class="blog-readMore">Read more <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        <span class="blog-readMore">Read more
+                            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                         </span>
                     </div>
                     <div class="blog-2">
                         <span class="blog-date"></span>
                         <span class="blog-head"></span>
-                        <span class="blog-readMore">Read more <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        <span class="blog-readMore">Read more
+                            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                         </span>
                     </div>
                     <div class="blog-3">
                         <span class="blog-date"></span>
                         <span class="blog-head"></span>
-                        <span class="blog-readMore">Read more <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        <span class="blog-readMore">Read more
+                            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                         </span>
                     </div>
                 </div>
@@ -200,17 +205,18 @@
         </div>
     </section>
 
-    <section class="contact">
+    <section class="contact" id="contact" style="background-image: url(assect/img/contact.jpg)">
         <div class="contact-main">
             <div class="contact-inner">
                 <div class="contact-address">
                     <div class="cnt-head">
-                        <span>
-                            Contact
-                        </span>
+                        <h3>Contact</h3>
                     </div>
                     <div class="cnt-quote">
-                        <span>You'll called for yielding male, so lights Stars abundantly, is their.</span>
+                        <p>
+                            You'll called for yielding male, so lights Stars abundantly, is
+                            their.
+                        </p>
                     </div>
                     <div class="cnt-address">
                         <span>27 Queen St, New York USA</span>
@@ -223,23 +229,27 @@
                     </div>
                 </div>
 
-                <div class="contact-form">
-                    <div class="form-head">
-                        <span>Let's grab a coffee and jump on conversation chat with me.</span>
-                    </div>
-                    <div class="form">
-                        <form action="">
-                            <input type="text">
-                            <input type="email">
-                            <textarea name="" id="" ></textarea>
-                            <button>CONTACT ME</button>
-                        </form>
+                <div class="contact-form-main">
+                    <div class="contact-form-inner">
+                        <div class="form-head">
+                            <h4>
+                                Let's grab a coffee and jump on conversation
+                                <a href="">chat with me.</a>
+                            </h4>
+                        </div>
+                        <div class="form-div">
+                            <form action="" class="form">
+                                <input type="text" placeholder="Your Name" />
+                                <input type="email" placeholder="Your Email" />
+                                <textarea name="" id="" placeholder="Message" rows="3"></textarea>
+                                <button>CONTACT ME</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
 </body>
 
 </html>
