--- a/projects.html
+++ b/projects.html
@@ -2,117 +2,118 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects</title>
-    <link rel="stylesheet" href="assect/css/style.css">
+    <link rel="stylesheet" href="assect/css/style.css" />
 
     <!-- fafa cdn - start -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!-- fafa cdn - end -->
 </head>
 
 <body>
-
     <header>
         <div class="base">
             <div class="logo">
-                <img src="assect/img/logo.svg" alt="">
+                <img src="assect/img/logo.svg" alt="" />
             </div>
             <nav class="head-nav">
-                <a href="">HOME</a>
-                <a href="">ABOUT</a>
-                <a href="">PROJECTS</a>
-                <a href="">TESTIMONIALS</a>
-                <a href="">PARTNERS</a>
-                <a href="">BLOG</a>
-                <a href="">CONTACT</a>
+                <a href="#home">HOME</a>
+                <a href="#about">ABOUT</a>
+                <a href="#projects">PROJECTS</a>
+                <a href="#testimonials">TESTIMONIALS</a>
+                <a href="#partners">PARTNERS</a>
+                <a href="#blog">BLOG</a>
+                <a href="#contact">CONTACT</a>
             </nav>
-            <div class="num">
-                +7(212)674-25-10
-            </div>
+            <div class="num">+7(212)674-25-10</div>
             <div class="social">
                 <div class="icon">
-                    <i class="fa fa-facebook" aria-hidden="true"></i> <br>
-                    <i class="fa fa-twitter" aria-hidden="true"></i> <br>
-                    <i class="fa fa-instagram" aria-hidden="true"></i> <br>
+                    <i class="fa fa-facebook" aria-hidden="true"></i> <br />
+                    <i class="fa fa-twitter" aria-hidden="true"></i> <br />
+                    <i class="fa fa-instagram" aria-hidden="true"></i> <br />
                 </div>
-                <div class="copyRight"><span>© Gilber. 2020</span></div>
+                <div class="copyRight-main">
+                    <div class="copyRight">
+                        <p>©&nbsp;Gilber.&nbsp;2020</p>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
 
+    <section class="project-banner" style="background-image: url('assect/img/bottle.jpg')">
+        <div class="project-banner-inner">
+            <div class="banner-content">
+                <div class="banner-head">
+                    <h1>The Bottle <span>.</span></h1>
+                </div>
+            </div>
 
+            <div class="banner-info">
+                <div class="bi-design">
+                    <span>DESIGN</span>
+                    <span>Jonny Laymore</span>
+                </div>
 
-    <section class="banner" style="background-image: url('assect/img/bottle.jpg');">
-        <div class="banner-content">
-            <div class="banner-head">
-                <span>The Bottle <span>.</span></span>
+                <div class="bi-services">
+                    <span>SERVICES</span>
+                    <span>Branding, UI/UX Design, Mobile Design</span>
+                </div>
+
+                <div class="bi-date">
+                    <span>DATE</span>
+                    <span>Feburary 25th, 2020</span>
+                </div>
+
+                <div class="bi-team">
+                    <span>TEAM</span>
+                    <span>Paul - Designer</span>
+                    <span>VLThemes - Coder</span>
+                </div>
             </div>
         </div>
-
-        <div class="banner-info">
-
-            <div class="bi-design">
-                <span>DESIGN</span>
-                <span>Jonny Laymore</span>
-            </div>
-
-            <div class="bi-services">
-                <span>SERVICES</span>
-                <span>Branding, UI/UX Design, Mobile Design</span>
-            </div>
-
-            <div class="bi-date">
-                <span>DATE</span>
-                <span>Feburary 25th, 2020</span>
-            </div>
-
-            <div class="bi-team">
-                <span>TEAM</span>
-                <span>Paul - Designer</span>
-                <span>VLThemes - Coder</span>
-            </div>
-        </div>
-
     </section>
 
     <section class="project-info">
         <div class="project-info-main">
-            <p>Updated portraits of all Instrument employees for the new Instrument site. A unified look and
-                background allows photos
-                to mesh seamlessly online. To see it live check out:<a href="">https://example.domain/denima6vsco</a>
+            <p>
+                Updated portraits of all Instrument employees for the new Instrument
+                site. A unified look and background allows photos to mesh seamlessly
+                online. To see it live check out:<a href="">https://example.domain/denima6vsco</a>
             </p>
         </div>
     </section>
 
-
     <section class="breaf">
         <div class="breaf-main">
             <div class="breaf-img">
-                <img src="assect/img/bottle2.jpg" alt="">
+                <img src="assect/img/bottle2.jpg" alt="" />
             </div>
             <div class="breaf-head">
                 <span>Breaf & idea</span>
             </div>
             <div class="breaf-con">
-                <p>Thing form thing fifth. Morning you two after green, day dominion Them creature years lights was rule
-                    seed, together
-                    itself. Lights creeping second spirit air the. You night and their.</p>
-                <p>Creepeth deep, dry whales. Given light, moving our. Third greater them replenish fourth.</p>
+                <p>
+                    Thing form thing fifth. Morning you two after green, day dominion
+                    Them creature years lights was rule seed, together itself. Lights
+                    creeping second spirit air the. You night and their.
+                </p>
+                <p>
+                    Creepeth deep, dry whales. Given light, moving our. Third greater
+                    them replenish fourth.
+                </p>
             </div>
         </div>
     </section>
 
-
-
-    <section class="project-video" style="background-image: url('assect/img/bottle3.jpg');">
+    <section class="project-video" style="background-image: url('assect/img/bottle3.jpg')">
         <!-- <div class="project-video-main"></div> -->
         <div class="project-video-play">
             <i class="fa fa-play" aria-hidden="true"></i>
         </div>
     </section>
-
 
     <section class="result">
         <div class="result-head">
@@ -120,13 +121,15 @@
         </div>
 
         <div class="result-info">
-            <p>To, him our hath one itself i great brought days may fowl, seed so great is fifth, herb second, said. His
-                place creepeth
-                male sea. Multiply bearing midst set.</p>
+            <p>
+                To, him our hath one itself i great brought days may fowl, seed so
+                great is fifth, herb second, said. His place creepeth male sea.
+                Multiply bearing midst set.
+            </p>
         </div>
 
         <div class="result-img">
-            <img src="assect/img/bottle.jpg" alt="">
+            <img src="assect/img/bottle.jpg" alt="" />
         </div>
 
         <div class="result-heart">
@@ -135,7 +138,6 @@
             </div>
         </div>
     </section>
-
 </body>
 
 </html>
