project page setUp

--- a/projects.html
+++ b/projects.html
@@ -44,33 +44,35 @@
     </header>
 
     <section class="project-banner" style="background-image: url('assect/img/bottle.jpg')">
-        <div class="project-banner-inner">
-            <div class="banner-content">
-                <div class="banner-head">
-                    <h1>The Bottle <span>.</span></h1>
-                </div>
-            </div>
-
-            <div class="banner-info">
-                <div class="bi-design">
-                    <span>DESIGN</span>
-                    <span>Jonny Laymore</span>
+        <div class="project-banner-main">
+            <div class="project-banner-inner">
+                <div class="banner-content">
+                    <div class="banner-head">
+                        <h1>The Bottle <span>.</span></h1>
+                    </div>
                 </div>
 
-                <div class="bi-services">
-                    <span>SERVICES</span>
-                    <span>Branding, UI/UX Design, Mobile Design</span>
-                </div>
+                <div class="banner-info">
+                    <div class="bi-design">
+                        <h4>DESIGN</h4>
+                        <p>Jonny Laymore</p>
+                    </div>
 
-                <div class="bi-date">
-                    <span>DATE</span>
-                    <span>Feburary 25th, 2020</span>
-                </div>
+                    <div class="bi-services">
+                        <h4>SERVICES</h4>
+                        <p>Branding, UI/UX Design, Mobile Design</p>
+                    </div>
 
-                <div class="bi-team">
-                    <span>TEAM</span>
-                    <span>Paul - Designer</span>
-                    <span>VLThemes - Coder</span>
+                    <div class="bi-date">
+                        <h4>DATE</h4>
+                        <p>Feburary 25th, 2020</p>
+                    </div>
+
+                    <div class="bi-team">
+                        <h4>TEAM</h4>
+                        <p>Paul - Designer</p>
+                        <p>VLThemes - Coder</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -91,51 +93,58 @@
             <div class="breaf-img">
                 <img src="assect/img/bottle2.jpg" alt="" />
             </div>
-            <div class="breaf-head">
-                <span>Breaf & idea</span>
-            </div>
+
             <div class="breaf-con">
-                <p>
-                    Thing form thing fifth. Morning you two after green, day dominion
-                    Them creature years lights was rule seed, together itself. Lights
-                    creeping second spirit air the. You night and their.
-                </p>
-                <p>
-                    Creepeth deep, dry whales. Given light, moving our. Third greater
-                    them replenish fourth.
-                </p>
+                <div class="breaf-head">
+                    <h3>Breaf & idea</h3>
+                </div>
+                <div class="breaf-co">
+                    <p>
+                        Thing form thing fifth. Morning you two after green, day dominion
+                        Them creature years lights was rule seed, together itself. Lights
+                        creeping second spirit air the. You night and their.
+                    </p>
+                    <p>
+                        Creepeth deep, dry whales. Given light, moving our. Third greater
+                        them replenish fourth.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
 
     <section class="project-video" style="background-image: url('assect/img/bottle3.jpg')">
-        <!-- <div class="project-video-main"></div> -->
         <div class="project-video-play">
             <i class="fa fa-play" aria-hidden="true"></i>
         </div>
     </section>
 
     <section class="result">
-        <div class="result-head">
-            <span>Result.</span>
-        </div>
+        <div class="result-main">
 
-        <div class="result-info">
-            <p>
-                To, him our hath one itself i great brought days may fowl, seed so
-                great is fifth, herb second, said. His place creepeth male sea.
-                Multiply bearing midst set.
-            </p>
-        </div>
-
-        <div class="result-img">
-            <img src="assect/img/bottle.jpg" alt="" />
-        </div>
-
-        <div class="result-heart">
-            <div class="rh-inner">
-                <i class="fa fa-heart" aria-hidden="true"></i>
+            <div class="result-head">
+                <h3>Result.</h3>
             </div>
+
+
+            <div class="result-info">
+                <p>
+                    To, him our hath one itself i great brought days may fowl, seed so
+                    great is fifth, herb second, said. His place creepeth male sea.
+                    Multiply bearing midst set.
+                </p>
+            </div>
+
+            <div class="result-img">
+                <img src="assect/img/bottle.jpg" alt="" />
+            </div>
+
+            <div class="result-heart">
+                <div class="rh-inner">
+                    <i class="fa fa-heart" aria-hidden="true"></i>
+                </div>
+            </div>
+
         </div>
     </section>
 </body>
