--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,7 @@
                 <a href="#home">HOME</a>
                 <a href="#about">ABOUT</a>
                 <a href="#projects">PROJECTS</a>
+                <a href="#education">EDUCATION</a>
                 <a href="#testimonials">TESTIMONIALS</a>
                 <a href="#partners">PARTNERS</a>
                 <a href="#blog">BLOG</a>
