--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <a href="#home">HOME</a>
                 <a href="#about">ABOUT</a>
                 <a href="#projects">PROJECTS</a>
+                <a href="#education">EDUCATION</a>
                 <a href="#testimonials">TESTIMONIALS</a>
                 <a href="#partners">PARTNERS</a>
                 <a href="#blog">BLOG</a>
@@ -44,8 +45,6 @@
     </header>
 
     <section class="home" id="home" style="background-image: url(assect/img/home.jpg)">
-        <!-- <img class="home-img" src="assect/img/home.jpg" alt="" > -->
-
         <div class="home-content-main">
             <div class="home-content-inside">
                 <div class="h-content">
@@ -121,21 +120,27 @@
 
     <section class="education" id="education"></section>
 
+
+
     <section class="testimonials" id="testimonials">
         <div class="tm-main">
             <div class="tm-con">
-                <div class="tmc-cote">
+                <div class="tmc-img">
                     <img src="assect/img/double-quotes.png" alt="" />
                 </div>
-                <div class="tmc-con">
-                    <span>Creative & dedicated is things that gilber studio brings for your
-                        business.</span>
+                <div class="tmc-head">
+                    <h3>Creative & dedicated is things that gilber studio brings for your
+                        business.</h3>
                 </div>
             </div>
 
-            <div class="tm-carousel"></div>
+            <div class="tm-carousel">
+
+            </div>
         </div>
     </section>
+
+
 
     <section class="partners" id="partners">
         <div class="partners-main">
@@ -175,27 +180,30 @@
         <div class="blog-main">
             <div class="blog-inner">
                 <div class="blog-head">
-                    <span>Recent news</span>
+                    <h3>Recent news</h3>
                 </div>
 
                 <div class="blog-con-main">
-                    <div class="blog-1">
+                    <div class="blog-card blog-1" style="background-image: url(assect/img/blog-1.jpg);">
                         <span class="blog-date"></span>
                         <span class="blog-head"></span>
+                        <p class="blog-con"></p>
                         <span class="blog-readMore">Read more
                             <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                         </span>
                     </div>
-                    <div class="blog-2">
+                    <div class="blog-card blog-2" style="background-image: url(assect/img/blog-2.jpg);">
                         <span class="blog-date"></span>
                         <span class="blog-head"></span>
+                        <p class="blog-con"></p>
                         <span class="blog-readMore">Read more
                             <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                         </span>
                     </div>
-                    <div class="blog-3">
+                    <div class="blog-card blog-3" style="background-image: url(assect/img/blog-3.jpg);">
                         <span class="blog-date"></span>
                         <span class="blog-head"></span>
+                        <p class="blog-con"></p>
                         <span class="blog-readMore">Read more
                             <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                         </span>
@@ -204,6 +212,8 @@
             </div>
         </div>
     </section>
+
+
 
     <section class="contact" id="contact" style="background-image: url(assect/img/contact.jpg)">
         <div class="contact-main">
