--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gilber - Homepage</title>
-    <link rel="stylesheet" href="assect/css/style.css" />
+    <!-- <link rel="stylesheet" href="assect/css/style.css" /> -->
+    <link rel="stylesheet" href="assect/css/home.css">
 
     <!-- fafa cdn - start -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -48,24 +49,24 @@
         <div class="home-content-main">
             <div class="home-content-inner">
                 <!-- <div class="h-content"> -->
-                    <div class="play-main">
-                        <div class="play-out">
-                            <i class="fa fa-play" aria-hidden="true"></i>
-                        </div>
+                <div class="play-main">
+                    <div class="play-out">
+                        <i class="fa fa-play" aria-hidden="true"></i>
                     </div>
+                </div>
 
-                    <div class="hc-heading">
-                        <span>Product Designer</span>
-                    </div>
+                <div class="hc-heading">
+                    <span>Product Designer</span>
+                </div>
 
-                    <div class="hc-name">
-                        <h1>Gilber<span>.</span></h1>
-                    </div>
-                    <div class="hc-detail">
-                        <span>Working with client and community, we deliver masterplans that
-                            create vibrant new places and spaces, attract people, and
-                            encourage</span>
-                    </div>
+                <div class="hc-name">
+                    <h1>Gilber<span>.</span></h1>
+                </div>
+                <div class="hc-detail">
+                    <p>Working with client and community, we deliver masterplans that
+                        create vibrant new places and spaces, attract people, and
+                        encourage</p>
+                </div>
                 <!-- </div> -->
             </div>
         </div>
@@ -73,46 +74,46 @@
 
     <section class="about" id="about">
         <div class="about-main">
-            <div class="am-content">
-                <div class="about-exp-out">
-                    <div class="about-exp">
-                        <div class="about-exp-num">
-                            <h1>9<span>.</span></h1>
-                        </div>
-                        <div class="about-exp-txt">
-                            <h5>Years</h5>
-                            <h5>Experience</h5>
-                            <h5>Working</h5>
-                        </div>
+            <!-- <div class="am-content"> -->
+            <div class="about-exp-out">
+                <div class="about-exp">
+                    <div class="about-exp-num">
+                        <h1>9<span>.</span></h1>
                     </div>
-                </div>
-
-                <div class="about-exp-topic">
-                    <div class="aet-head">
-                        <h3>Great Experience</h3>
-                    </div>
-                    <div class="aet-contect">
-                        <p>
-                            Fill appear won't may make moveth signs. Fourth. Good own. Green
-                            you're moveth us, lesser.
-                        </p>
-                    </div>
-                    <div class="about-range-main">
-                        <div class="range-box web">
-                            <h5>WEB DESIGN</h5>
-                            <div class="range r1"></div>
-                        </div>
-                        <div class="range-box figma">
-                            <h5>FIGMA</h5>
-                            <div class="range r2"></div>
-                        </div>
-                        <div class="range-box wordpress">
-                            <h5>WORDPRESS</h5>
-                            <div class="range r3"></div>
-                        </div>
+                    <div class="about-exp-txt">
+                        <h5>Years</h5>
+                        <h5>Experience</h5>
+                        <h5>Working</h5>
                     </div>
                 </div>
             </div>
+
+            <div class="about-exp-topic">
+                <div class="aet-head">
+                    <h3>Great Experience</h3>
+                </div>
+                <div class="aet-contect">
+                    <p>
+                        Fill appear won't may make moveth signs. Fourth. Good own. Green
+                        you're moveth us, lesser.
+                    </p>
+                </div>
+                <div class="about-range-main">
+                    <div class="range-box web">
+                        <h5>WEB DESIGN</h5>
+                        <div class="range r1"></div>
+                    </div>
+                    <div class="range-box figma">
+                        <h5>FIGMA</h5>
+                        <div class="range r2"></div>
+                    </div>
+                    <div class="range-box wordpress">
+                        <h5>WORDPRESS</h5>
+                        <div class="range r3"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- </div> -->
         </div>
     </section>
 
