--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gilber - Homepage</title>
     <!-- <link rel="stylesheet" href="assect/css/style.css" /> -->
-    <link rel="stylesheet" href="assect/css/home.css">
+    <link rel="stylesheet" href="assect/css/home.css" />
 
     <!-- fafa cdn - start -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -45,6 +45,48 @@
         </div>
     </header>
 
+
+    <section class="res-nav">
+        <div class="res-nav-inner">
+            <div class="rn-language">
+                <div class="lng">
+                    <a href="">ENG</a>
+                    <a href="">FRA</a>
+                    <a href="">GER</a>
+                </div>
+                <div class="cancel">
+                    <img src="assect/img/logo/close.png" alt="">
+                </div>
+            </div>
+            <div class="rs-menu">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
+                    <li><a href="#partners">Partners</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+            <div class="rs-link">
+                <div class="rs-link-inner">
+                    <div class="rsl-social">
+                        <i class="fa fa-facebook" aria-hidden="true"></i> <br />
+                        <i class="fa fa-twitter" aria-hidden="true"></i> <br />
+                        <i class="fa fa-instagram" aria-hidden="true"></i> <br />
+                    </div>
+                    <div class="rsl-copyright">
+                        <p>© 2020 COPYRIGHT. <br>
+                            ALL RIGHTS RESERVED.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <section class="home" id="home" style="background-image: url(assect/img/home.jpg)">
         <div class="home-content-main">
             <div class="home-content-inner">
@@ -63,9 +105,11 @@
                     <h1>Gilber<span>.</span></h1>
                 </div>
                 <div class="hc-detail">
-                    <p>Working with client and community, we deliver masterplans that
+                    <p>
+                        Working with client and community, we deliver masterplans that
                         create vibrant new places and spaces, attract people, and
-                        encourage</p>
+                        encourage
+                    </p>
                 </div>
                 <!-- </div> -->
             </div>
@@ -121,8 +165,6 @@
 
     <section class="education" id="education"></section>
 
-
-
     <section class="testimonials" id="testimonials">
         <div class="tm-main">
             <div class="tm-con">
@@ -130,18 +172,16 @@
                     <img src="assect/img/double-quotes.png" alt="" />
                 </div>
                 <div class="tmc-head">
-                    <h3>Creative & dedicated is things that gilber studio brings for your
-                        business.</h3>
+                    <h3>
+                        Creative & dedicated is things that gilber studio brings for your
+                        business.
+                    </h3>
                 </div>
             </div>
 
-            <div class="tm-carousel">
-
-            </div>
+            <div class="tm-carousel"></div>
         </div>
     </section>
-
-
 
     <section class="partners" id="partners">
         <div class="partners-main">
@@ -179,86 +219,82 @@
 
     <section class="blog" id="blog">
         <div class="blog-main">
-            <div class="blog-inner">
-                <div class="blog-head">
-                    <h3>Recent news</h3>
-                </div>
+            <div class="blog-head">
+                <h3>Recent news</h3>
+            </div>
 
-                <div class="blog-con-main">
-                    <div class="blog-card blog-1" style="background-image: url(assect/img/blog-1.jpg);">
-                        <span class="blog-date"></span>
-                        <span class="blog-head"></span>
-                        <p class="blog-con"></p>
-                        <span class="blog-readMore">Read more
-                            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                        </span>
-                    </div>
-                    <div class="blog-card blog-2" style="background-image: url(assect/img/blog-2.jpg);">
-                        <span class="blog-date"></span>
-                        <span class="blog-head"></span>
-                        <p class="blog-con"></p>
-                        <span class="blog-readMore">Read more
-                            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                        </span>
-                    </div>
-                    <div class="blog-card blog-3" style="background-image: url(assect/img/blog-3.jpg);">
-                        <span class="blog-date"></span>
-                        <span class="blog-head"></span>
-                        <p class="blog-con"></p>
-                        <span class="blog-readMore">Read more
-                            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                        </span>
-                    </div>
+            <div class="blog-con-main">
+                <div class="blog-card blog-1" style="background-image: url(assect/img/blog-1.jpg)">
+                    <span class="blog-date"></span>
+                    <span class="blog-head"></span>
+                    <p class="blog-con"></p>
+                    <span class="blog-readMore">Read more
+                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                    </span>
+                </div>
+                <div class="blog-card blog-2" style="background-image: url(assect/img/blog-2.jpg)">
+                    <span class="blog-date"></span>
+                    <span class="blog-head"></span>
+                    <p class="blog-con"></p>
+                    <span class="blog-readMore">Read more
+                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                    </span>
+                </div>
+                <div class="blog-card blog-3" style="background-image: url(assect/img/blog-3.jpg)">
+                    <span class="blog-date"></span>
+                    <span class="blog-head"></span>
+                    <p class="blog-con"></p>
+                    <span class="blog-readMore">Read more
+                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                    </span>
                 </div>
             </div>
         </div>
     </section>
 
-
-
     <section class="contact" id="contact" style="background-image: url(assect/img/contact.jpg)">
         <div class="contact-main">
-            <div class="contact-inner">
-                <div class="contact-address">
-                    <div class="cnt-head">
-                        <h3>Contact</h3>
-                    </div>
-                    <div class="cnt-quote">
-                        <p>
-                            You'll called for yielding male, so lights Stars abundantly, is
-                            their.
-                        </p>
-                    </div>
-                    <div class="cnt-address">
-                        <span>27 Queen St, New York USA</span>
-                    </div>
-                    <div class="cnt-number">
-                        <span>+7 (212) 674-25-10</span>
-                    </div>
-                    <div class="cnt-email">
-                        <span>gilber.design@gmail.com</span>
-                    </div>
+            <!-- <div class="contact-inner"> -->
+            <div class="contact-address">
+                <div class="cnt-head">
+                    <h3>Contact</h3>
                 </div>
+                <div class="cnt-quote">
+                    <p>
+                        You'll called for yielding male, so lights Stars abundantly, is
+                        their.
+                    </p>
+                </div>
+                <div class="cnt-address">
+                    <span>27 Queen St, New York USA</span>
+                </div>
+                <div class="cnt-number">
+                    <span>+7 (212) 674-25-10</span>
+                </div>
+                <div class="cnt-email">
+                    <span>gilber.design@gmail.com</span>
+                </div>
+            </div>
 
-                <div class="contact-form-main">
-                    <div class="contact-form-inner">
-                        <div class="form-head">
-                            <h4>
-                                Let's grab a coffee and jump on conversation
-                                <a href="">chat with me.</a>
-                            </h4>
-                        </div>
-                        <div class="form-div">
-                            <form action="" class="form">
-                                <input type="text" placeholder="Your Name" />
-                                <input type="email" placeholder="Your Email" />
-                                <textarea name="" id="" placeholder="Message" rows="3"></textarea>
-                                <button>CONTACT ME</button>
-                            </form>
-                        </div>
+            <div class="contact-form-main">
+                <div class="contact-form-inner">
+                    <div class="form-head">
+                        <h4>
+                            Let's grab a coffee and jump on conversation
+                            <a href="">chat with me.</a>
+                        </h4>
+                    </div>
+                    <div class="form-div">
+                        <form action="" class="form">
+                            <input type="text" placeholder="Your Name" />
+                            <input type="email" placeholder="Your Email" />
+                            <textarea name="" id="" placeholder="Message" rows="4"></textarea>
+                            <button>CONTACT ME</button>
+                        </form>
                     </div>
                 </div>
             </div>
+            <!-- </div> -->
         </div>
     </section>
 </body>
